--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -50,7 +50,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AspireMedicalStaffing/743999692313997-pediatric-cfy-speech-language-pathologist-central-and-north-austin'>Aspire Medical Staffing Pediatric CFY/Speech Language Pathologist-Central and North Austin | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AspireMedicalStaffing/743999692313997-pediatric-cfy-speech-language-pathologist-central-and-north-austin'>Aspire Medical Staffing Pediatric CFY/Speech Language Pathologist-Central and North Austin | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4338247002'>Job Application for Pediatric Speech Language Pathologist (SLP) at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4338247002'>Job Application for Pediatric Speech Language Pathologist (SLP) at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -163,11 +163,11 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/angelsofcare/job/oYBm9fwO'>Angels of Care Pediatric Home Health Careers - Speech Language Pathologist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/angelsofcare/job/oYBm9fwO'>Angels of Care Pediatric Home Health Careers - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691848201-speech-language-pathologist-slp-needed-for-home-health-in-rowland-heights'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Rowland Heights | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691848201-speech-language-pathologist-slp-needed-for-home-health-in-rowland-heights'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Rowland Heights | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -243,7 +243,7 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p>Jun 27, 2019 ... Marquardt Home and Community Based Services Inc is now hiring a Speech 
 Language Pathologist - SLP - PRN - Home Health in Watertown, Wisconsin.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-healthpro-rehab.icims.com/jobs/23155/full-time-speech-language-pathologist-%28slp%29--%245%2C000-bonus/job'>Full-time Speech Language Pathologist (SLP)- $5000 Bonus</a></h5> 
+<h5><a href='https://careers-healthpro-rehab.icims.com/jobs/23155/full-time-speech-language-pathologist-%28slp%29--%245%2C000-bonus/job'>Full-time Speech Language Pathologist (SLP)- $5000 Bonus</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 27, 2019 ... Coos County Nursing Home is now hiring a Full-time Speech Language 
 Pathologist (SLP)- $5000 Bonus in Berlin, New Hampshire. Review all of the job 
@@ -386,7 +386,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
